ticket/6ec/6ec4d1b66f18a9da05ced5ce5a7eda849e304766/71ddebcf9d25aab7c0849b3a96a5804f16d21bd6.txt
Setting up python2.4 (2.4.1-2sarge1) ...
Compiling python modules in /usr/lib/python2.4 ...
Compiling /usr/lib/python2.4/site-packages/twisted/test/stdio_test_halfclose.py ...
  File "/usr/lib/python2.4/site-packages/twisted/test/stdio_test_halfclose.py", line 20
    ???
    ^
SyntaxError: invalid syntax

dpkg: error processing python2.4 (--configure):
 subprocess post-installation script returned error exit status 1
dpkg: dependency problems prevent configuration of python2.4-dev:
 python2.4-dev depends on python2.4 (= 2.4.1-2sarge1); however:
  Package python2.4 is not configured yet.
dpkg: error processing python2.4-dev (--configure):
 dependency problems - leaving unconfigured
Errors were encountered while processing:
 python2.4
 python2.4-dev
E: Sub-process /usr/bin/dpkg returned an error code (1)
